# bazel

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  main.cc
eigen3/: BUILD
lib/: BUILD  dp.h  greedy.h  leetcode.cc  leetcode.h  linklist.h  pointer.h
main/: BUILD  main.cc
src/: BUILD  server_protocol.h
toolchain/: BUILD  cc_toolchain_config.bzl
