module(
    name = "bazel_project",
    version = "0.0.1",
)

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")
new_git_repository(
    name = "jsoncpp",
    commit = "69098a18b9af0c47549d9a271c054d13ca92b006",
    remote = "https://gitee.com/mirrors/jsoncpp.git",
    build_file= "third_party/BUILD.jsoncpp"
)
